# cfactory

./: .pdm.toml  pyproject.toml
cfactory_test_cache/ccm_test/home/gabriel/projects/cfactory/test/test_hh/: class_test.ccs  enumeration_test.ccs  function_test.ccs  namespace_test.ccs  parse_test.ccs  templates_test.ccs  union_test.ccs  variable_test.ccs
src/cfactory/: assembler.py  cfactory.py  factory.py  paths.py
src/cfactory/__config__/: cfactory_config.py
src/cfactory/assemblers/: assembler.py
src/cfactory/assemblers/cybind/: assembler.py  cybind.py  cybind_sections.py  cybind_writers.py  paths.py
src/cfactory/assemblers/cybind/py/: filters.py
src/cfactory/assemblers/cybind/templates/: class.template  cybind_header.template  func_decl_section.template  function.template  import_section.template  pxd.template  pxd_body.template  pyx_body.template  variable_section.template
src/cfactory/breathe/: breathe_main.py  breathe_parser.py  conf.py  doxy_cfg.py
src/cfactory/utils/: cfamily_file.py  file_sys.py  file_writer.py  pyfamily_file.py  wheezy_section.py
test/: cfscript.py
test/test_hh/: class_test.hh  enumeration_test.hh  function_test.hh  namespace_test.hh  parse_test.hh  templates_test.hh  union_test.hh  variable_test.hh
