[project]
name = "cfactory"
version = "0.1.1"
description = ""
authors = [
    {name = "Gabe Ingram", email = "gabriel.ingram@colorado.edu"},
]
dependencies = [
    "loguru~=0.5",
    "graphlib-backport~=1.0",
    "-e file:///home/gabriel/projects/ccmodel#egg=ccmodel",
]
requires-python = ">=3.8"
dynamic = ["classifiers"]
license = {text = "MIT"}
keywords = [
    "c",
    "cc",
    "c++",
    "cpp",
    "parse",
    "code",
    "model",
    "meta",
    "metaprogramming"
]

[project.urls]
repository = "https://github.com/gjingram/cfactory"
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
